@@ -1,3 +1,10 @@
+2013-11-10    <larus@IC-LMC-ICDO-01>
+
+	* QtSpim/datawin.cpp (formatWord): 
+	[https://sourceforge.net/p/spimsimulator/bugs/52]:
+	Negative decimal should be preceeded by spaces, not zeros, when
+	printing data.
+
 2013-10-27  Larus  <larus@ubuntu>
 
 	* Setup/qtspim_debian_deployment/control.prototype:n
